# agent-skills

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: validate.yml
references/: final_review.md  troubleshooting.md
scripts/: validate_skills.py  youtube_summary.py
skills/video-summary/: SKILL.md  pyproject.toml
skills/video-summary/agents/: openai.yaml
skills/video-summary/references/: platform_harness.md  troubleshooting.md
skills/video-summary/scripts/: bootstrap.ps1  bootstrap.py  bootstrap.sh  check_env.py  install_deps.py  video_summary.py
