[project]
name = "openclaw-youtube-summary"
version = "0.1.0"
description = "OpenClaw skill helper for summarizing YouTube videos locally without paid APIs."
requires-python = ">=3.10"
dependencies = [
  "av>=14.0.0",
  "faster-whisper>=1.1.0",
  "Pillow>=11.0.0",
  "yt-dlp>=2025.1.15",
  "youtube-transcript-api>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
