[project]
name = "agent-video-summary"
version = "0.3.0"
description = "Local multi-platform video summarization skill for shell-capable agents, without paid APIs."
requires-python = ">=3.10"
dependencies = [
  "av>=14.0.0",
  "faster-whisper>=1.1.0",
  "Pillow>=11.0.0",
  "yt-dlp>=2025.1.15",
  "youtube-transcript-api>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
